--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -42,22 +42,26 @@ Table of content
 /* =============================Home Page css Start============================= */
 
 /* hero part css start  */
-#main_banner .banner_slider{
+#main_banner .banner_slider {
     position: relative;
+
 }
+
 #main_banner .banner_slider div {
-    height: 613px;
-    background-size: cover;
-    background-position: center;
+    height: 800px;
+    background-size: cover !important;
+    background-position: center !important;
     color: var(--Common-Color);
     font-family: var(--primary-font);
+
 }
 
 #main_banner .banner_slider div h6 {
+    padding-top: 248px;
     font-size: 18px;
     font-weight: 600;
     line-height: 28px;
-    padding-top:138px;
+
 }
 
 #main_banner .banner_slider div h1 {
@@ -73,30 +77,445 @@ Table of content
     line-height: 28px;
     padding-bottom: 29px;
 }
-#main_banner .banner_slider .slider_dot{
- display: flex;
- position: absolute;
- bottom: 120px;
- left: 120px;
- 
+
+#main_banner .banner_slider .slider_dot {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    bottom: 120px;
+    left: 120px;
+
 }
-#main_banner .banner_slider .slider_dot li{
-    padding-right:3px ;
-}
-#main_banner .banner_slider .slider_dot li button {
+
+/* #main_banner .banner_slider .slider_dot li button{    
     width: 10px;
     height: 5px;
-    font-size: 0;
+    font-size: 0px;
     border-radius: 5px;
-    border:none;
-    background: none; 
-    background-color:var(--Common-Color);
-      
+    border: none;
+    background: none;
+    background-color: var(--Common-Color);
+    margin-right: 3px;
 }
-#main_banner .banner_slider .slider_dot li.slick-active button{
+#main_banner .banner_slider .slider_dot li.slick-active button {
     width: 20px;
     background-color: var(--Primary-Color);
+} */
+
+/* <!-- main banner  part css end --> */
+
+/* <!-- product part css start --> */
+#product_banner {
+    margin-top: 96px;
 }
+
+#product_banner h3 a {
+    color: var(--Common-Color);
+    font-family: var(--primary-font);
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 40px;
+
+}
+
+#product_banner a {
+    color: var(--Common-Color);
+    font-family: var(--primary-font);
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 28px;
+}
+
+
+#product_banner .product_banner_detail_1 {
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+
+}
+
+#product_banner .product_banner_detail_1 .product_banner_detail_1_info {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 90%;
+    height: 70%;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    transform: scale(0);
+    text-align: center;
+    transition: 0.8s;
+}
+
+#product_banner .product_banner_detail_1:hover .product_banner_detail_1_info {
+    transform: scale(1);
+}
+
+#product_banner .product_banner_detail_2 {
+
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+
+}
+
+#product_banner .product_banner_detail_2 .product_banner_detail_2_info {
+
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 90%;
+    height: 70%;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    transform: scale(0);
+    text-align: center;
+    transition: 0.8s;
+}
+
+#product_banner .product_banner_detail_2:hover .product_banner_detail_2_info {
+    transform: scale(1);
+}
+
+#product_banner .product_banner_detail_3 {
+
+    background-size: cover;
+    background-position: center;
+    position: relative;
+
+}
+
+#product_banner .product_banner_detail_3 .product_banner_detail_3_info {
+
+    background-color: rgba(102, 88, 88, 0.4);
+    width: 95%;
+    height: 95%;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    transform: scale(0);
+    text-align: center;
+    transition: 0.8s;
+}
+
+#product_banner .product_banner_detail_3:hover .product_banner_detail_3_info {
+    transform: scale(1);
+}
+
+/* <!-- product part css start --> */
+
+/* New Arrivals Products css start */
+#new_arrivals .product_slider {
+    padding: 24px 0px;
+}
+
+#new_arrivals .product_slider .product_slider_item {
+    border: 1px solid var(--derk-color);
+    background: var(--Common-Color);
+    margin: 0px 12px;
+
+}
+
+#new_arrivals .product_slider .product_slider_item.item5,
+#new_arrivals .product_slider .product_slider_item.item4,
+#new_arrivals .product_slider .product_slider_item.item3,
+#new_arrivals .product_slider .product_slider_item.item2,
+#new_arrivals .product_slider .product_slider_item.item1 {
+    position: relative;
+
+}
+
+#new_arrivals .product_slider .product_slider_item .item5_top,
+#new_arrivals .product_slider .product_slider_item .item4_top,
+#new_arrivals .product_slider .product_slider_item .item3_top,
+#new_arrivals .product_slider .product_slider_item .item2_top,
+#new_arrivals .product_slider .product_slider_item .item1_top {
+    position: absolute;
+    top: 0px;
+    left: 24px;
+}
+
+#new_arrivals .product_slider_item .product_info {
+    padding: 24px 0px;
+}
+
+#new_arrivals .product_slider_item .product_info span {
+    color: var(--Paragraph-Color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+
+}
+
+#new_arrivals .product_slider_item .product_info h6 {
+    color: var(--text-color);
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    margin: 5px 0 11px 0;
+}
+
+/* New Arrivals Products css end */
+
+/* best_spa_Cosmetics css start */
+#best_spa_Cosmetics div {
+    height: 524px;
+    background-size: cover;
+    background-position: center;
+    color: var(--Common-Color);
+    margin: 96px 0px;
+}
+
+#best_spa_Cosmetics:hover {}
+
+
+#best_spa_Cosmetics #best_spa_Cosmetics_info {
+    padding: 103px 10px;
+}
+
+#best_spa_Cosmetics #best_spa_Cosmetics_info h3 {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 46px;
+}
+
+#best_spa_Cosmetics #best_spa_Cosmetics_info p {
+    font-size: 16px;
+    line-height: 28px;
+    padding: 10px 0px 30px 0px;
+}
+
+#best_spa_Cosmetics #best_spa_Cosmetics_info a {
+    border: 1px solid var(--Common-Color);
+    background: none;
+}
+
+#best_spa_Cosmetics #best_spa_Cosmetics_info a:hover {
+    background-color: var(--light-hover-color);
+}
+
+/* best_spa_Cosmetics css end */
+
+
+
+
+/* New Arrivals Products css end */
+
+/* best_seller_product css start */
+
+
+#best_seller_product .product_slider_item {
+    border: 1px solid var(--derk-color);
+    background: var(--Common-Color);
+    margin-bottom: 24px;
+
+}
+
+#best_seller_product .product_slider_item.item5,
+#best_seller_product .product_slider_item.item4,
+#best_seller_product .product_slider_item.item3,
+#best_seller_product .product_slider_item.item2,
+#best_seller_product .product_slider_item.item1 {
+    position: relative;
+
+}
+
+#best_seller_product .product_slider_item .item5_top,
+#best_seller_product .product_slider_item .item4_top,
+#best_seller_product .product_slider_item .item3_top,
+#best_seller_product .product_slider_item .item2_top,
+#best_seller_product .product_slider_item .item1_top {
+    position: absolute;
+    top: 0px;
+    left: 24px;
+}
+
+#best_seller_product .product_slider_item .product_info {
+    padding: 24px 0px;
+}
+
+#best_seller_product .product_slider_item .product_info span {
+    color: var(--Paragraph-Color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+
+}
+
+#best_seller_product .product_slider_item .product_info h6 {
+    color: var(--text-color);
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    margin: 5px 0 11px 0;
+}
+
+#best_seller_product .btn_a {
+    text-transform: capitalize;
+    padding: 13px 27px;
+    margin: 40px 0px 96px 0px;
+}
+
+/* best_seller_product css end */
+
+/* Deals Of The Days css start */
+
+
+
+#Deals_Of_The_Days {
+    position: relative;
+}
+
+#Deals_Of_The_Days h3 {
+    padding-bottom: 69px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider div {
+    background-size: cover;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_time {
+    width: 424px;
+    height: 70px;
+    border-radius: 40px;
+    background: var(--Common-Color);
+    box-shadow: 0px 0px 10px 0px rgba(21, 26, 50, 0.10);
+    position: absolute;
+    top: 175px;
+    left: 450px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider {
+    padding: 75px 19.5px;
+    position: relative;
+}
+
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .Deals_Of_The_Days_slider_item {
+    margin: 0px 19.5px;
+
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_bg {
+    background: var(--Common-Color);
+    box-shadow: 0px 0px 70px 0px rgba(21, 26, 50, 0.08);
+    height: 646px;
+
+}
+
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .Deals_Of_The_Days_info {
+    color: var(--text-color);
+    /* Heading - H6 */
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    padding-left: 40px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .Deals_Of_The_Days_info h6 {
+    padding: 35px 0px 10px 0px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .Deals_Of_The_Days_info h3 {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 46px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .Deals_Of_The_Days_info p {
+    color: var(--Paragraph-Color);
+    font-family: var(--secondary-font);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    /* 175% */
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .Deals_Of_The_Days_info span,
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .Deals_Of_The_Days_info h5 {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    padding: 19px 0px 30px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .Deals_Of_The_Days_info span {
+    color: var(--Paragraph-Color);
+    text-decoration-line: line-through;
+    margin-left: 13px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .Deals_Of_The_Days_info a {
+    color: var(--Common-Color);
+    font-size: 16px;
+    line-height: 28px;
+    margin-bottom: 131px;
+    padding: 13px 27px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .slider_dot li button {
+    background-color: var(--derk-color);
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .slider_dot li.slick-active button {
+    background-color: var(--text-color);
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_slider .slider_dot {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    bottom: 50px;
+    left: 535px;
+}
+/* Deals@SPECIAL OFFER  css part start */
+#Deals_Of_The_Days .Deals_Of_The_Days_spacial_offer {
+    margin-top: 85px;
+    height: 517px;
+    background-color: var(--middium-BG);
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_spacial_offer .spacial_offer_info small {
+    color: var(--Paragraph-Color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_spacial_offer .spacial_offer_info h3 {
+    color: var(--text-color);
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 46px;
+    padding: 10px 0px 16px;
+}
+
+#Deals_Of_The_Days .Deals_Of_The_Days_spacial_offer .spacial_offer_info p {
+    color: var(--Paragraph-Color);
+    font-family: var(--secondary-font);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    padding-bottom: 30px;
+}
+#Deals_Of_The_Days .Deals_Of_The_Days_spacial_offer .spacial_offer_info a{
+    padding: 13px 23px;
+}
+/* Deals@SPECIAL OFFER  css part end */
+
+/* Deals Of The Days css end */
+
+/* Latest News css start */
+
+/* Latest News css end */
+
+
+
+
+
 
 
 
